// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Rich Text renders richtext widget 1`] = `
<div>
  <div
    class="widget-rich-text form-control toolbar-bottom"
    style="width: 100%;"
  >
    <div
      class="tiptap-wrapper"
    >
      <div
        class="tiptap-toolbar"
      >
        <div
          class="toolbar-row toolbar-row-primary"
        >
          <div
            class="toolbar-group"
          >
            <button
              class="icon-button is-active"
              title="Bold"
              type="button"
            >
              <span
                class="icons icon-Text-bold"
              />
            </button>
            <button
              class="icon-button"
              title="Italic"
              type="button"
            >
              <span
                class="icons icon-Text-italic"
              />
            </button>
            <button
              class="icon-button"
              title="Underline"
              type="button"
            >
              <span
                class="icons icon-Text-underline"
              />
            </button>
            <button
              class="icon-button"
              title="Strikethrough"
              type="button"
            >
              <span
                class="icons icon-Text-strikethrough"
              />
            </button>
          </div>
          <div
            class="toolbar-group"
          >
            <button
              class="icon-button"
              title="Bullet List"
              type="button"
            >
              <span
                class="icons icon-List-bullets"
              />
            </button>
            <div
              aria-label="Numbered List"
              class="split-button "
              role="group"
            >
              <button
                aria-label="Numbered List - Toggle"
                aria-pressed="false"
                class="split-button-main icon-button"
                type="button"
              >
                <span
                  class="icons icon-List-numbers"
                />
              </button>
              <button
                aria-expanded="false"
                aria-haspopup="menu"
                aria-label="Numbered List - Style options"
                class="split-button-dropdown"
                type="button"
              >
                <span
                  class="icons icon-Arrow-down dropdown-arrow"
                />
              </button>
            </div>
            <button
              class="icon-button"
              title="Task List"
              type="button"
            >
              <span
                class="icons icon-List-checklist"
              />
            </button>
          </div>
          <div
            class="toolbar-group"
          >
            <button
              class="icon-button"
              title="Decrease Indent"
              type="button"
            >
              <span
                class="icons icon-Text-indent-right"
              />
            </button>
            <button
              class="icon-button"
              title="Increase Indent"
              type="button"
            >
              <span
                class="icons icon-Text-indent-left"
              />
            </button>
            <button
              class="icon-button"
              title="Text Direction"
              type="button"
            >
              <span
                class="icons icon-Left-to-right"
              />
            </button>
          </div>
          <div
            class="toolbar-group"
          >
            <div
              style="position: relative;"
            >
              <button
                class="icon-button"
                title="Insert Link"
                type="button"
              >
                <span
                  class="icons icon-Hyperlink"
                />
              </button>
            </div>
            <div
              style="position: relative;"
            >
              <button
                class="icon-button"
                title="Insert Image"
                type="button"
              >
                <span
                  class="icons icon-Image"
                />
              </button>
            </div>
            <div
              style="position: relative;"
            >
              <button
                class="icon-button"
                title="Insert YouTube Video"
                type="button"
              >
                <span
                  class="icons icon-Film"
                />
              </button>
            </div>
          </div>
          <div
            class="toolbar-group"
          >
            <button
              class="icon-button"
              title="Clear Formatting"
              type="button"
            >
              <span
                class="icons icon-Erase"
              />
            </button>
          </div>
        </div>
        <div
          class="toolbar-row toolbar-row-primary"
        />
      </div>
      <div
        class="tiptap-editor"
        style="height: auto;"
      >
        <div
          class="tiptap ProseMirror"
          contenteditable="true"
          role="textbox"
          tabindex="0"
          translate="no"
        >
          <h2
            style="text-align: left;"
          >
            <strong>
              Rich text default value
            </strong>
          </h2>
          <p>
            <br
              class="ProseMirror-trailingBreak"
            />
          </p>
        </div>
      </div>
    </div>
    <div
      aria-label="Editor status bar"
      aria-live="polite"
      class="rich-text-status-bar"
      role="region"
      tabindex="0"
    >
      <span
        class="status-bar-text"
      >
        Words: 4
      </span>
    </div>
  </div>
</div>
`;

exports[`Rich Text renders richtext widget with different config 1`] = `
<div>
  <div
    class="widget-rich-text form-control toolbar-top"
    style="width: 100%;"
  >
    <div
      class="tiptap-wrapper"
    >
      <div
        class="tiptap-toolbar"
      >
        <div
          class="toolbar-row toolbar-row-primary"
        >
          <div
            class="toolbar-group"
          >
            <button
              class="icon-button"
              title="Undo"
              type="button"
            >
              <span
                class="icons icon-Undo"
              />
            </button>
            <button
              class="icon-button"
              disabled=""
              title="Redo"
              type="button"
            >
              <span
                class="icons icon-Redo"
              />
            </button>
          </div>
          <div
            class="toolbar-group"
          >
            <button
              class="icon-button is-active"
              title="Bold"
              type="button"
            >
              <span
                class="icons icon-Text-bold"
              />
            </button>
            <button
              class="icon-button"
              title="Italic"
              type="button"
            >
              <span
                class="icons icon-Text-italic"
              />
            </button>
            <button
              class="icon-button"
              title="Underline"
              type="button"
            >
              <span
                class="icons icon-Text-underline"
              />
            </button>
            <button
              class="icon-button"
              title="Strikethrough"
              type="button"
            >
              <span
                class="icons icon-Text-strikethrough"
              />
            </button>
          </div>
          <div
            class="toolbar-group"
          >
            <button
              class="icon-button"
              title="Superscript"
              type="button"
            >
              <span
                class="icons icon-Text-superscript"
              />
            </button>
            <button
              class="icon-button"
              title="Subscript"
              type="button"
            >
              <span
                class="icons icon-Text-subscript"
              />
            </button>
          </div>
          <div
            class="toolbar-group"
          >
            <button
              class="icon-button"
              title="Bullet List"
              type="button"
            >
              <span
                class="icons icon-List-bullets"
              />
            </button>
            <div
              aria-label="Numbered List"
              class="split-button "
              role="group"
            >
              <button
                aria-label="Numbered List - Toggle"
                aria-pressed="false"
                class="split-button-main icon-button"
                type="button"
              >
                <span
                  class="icons icon-List-numbers"
                />
              </button>
              <button
                aria-expanded="false"
                aria-haspopup="menu"
                aria-label="Numbered List - Style options"
                class="split-button-dropdown"
                type="button"
              >
                <span
                  class="icons icon-Arrow-down dropdown-arrow"
                />
              </button>
            </div>
            <button
              class="icon-button"
              title="Task List"
              type="button"
            >
              <span
                class="icons icon-List-checklist"
              />
            </button>
          </div>
          <div
            class="toolbar-group"
          >
            <button
              class="icon-button"
              title="Decrease Indent"
              type="button"
            >
              <span
                class="icons icon-Text-indent-right"
              />
            </button>
            <button
              class="icon-button"
              title="Increase Indent"
              type="button"
            >
              <span
                class="icons icon-Text-indent-left"
              />
            </button>
            <button
              class="icon-button"
              title="Text Direction"
              type="button"
            >
              <span
                class="icons icon-Left-to-right"
              />
            </button>
          </div>
          <div
            class="toolbar-group"
          >
            <button
              class="icon-button is-active"
              title="Align Left"
              type="button"
            >
              <span
                class="icons icon-Text-align-left"
              />
            </button>
            <button
              class="icon-button"
              title="Align Center"
              type="button"
            >
              <span
                class="icons icon-Text-align-center"
              />
            </button>
            <button
              class="icon-button"
              title="Align Right"
              type="button"
            >
              <span
                class="icons icon-Text-align-right"
              />
            </button>
            <button
              class="icon-button"
              title="Align Justify"
              type="button"
            >
              <span
                class="icons icon-Text-align-justify"
              />
            </button>
          </div>
          <div
            class="toolbar-group"
          >
            <button
              class="toolbar-dropdown-button fontFamily"
              title="Font Family"
              type="button"
            >
              <span
                class="dropdown-label"
              >
                Font Family
              </span>
              <span
                class="icons icon-Arrow-down dropdown-arrow"
              />
            </button>
            <button
              class="toolbar-dropdown-button fontSize"
              title="Font Size"
              type="button"
            >
              <span
                class="dropdown-label"
              >
                14px
              </span>
              <span
                class="icons icon-Arrow-down dropdown-arrow"
              />
            </button>
            <div
              style="position: relative;"
            >
              <button
                class="icon-button"
                title="Text Color"
                type="button"
              >
                <span
                  class="icons icon-Text-color"
                />
              </button>
            </div>
            <div
              style="position: relative;"
            >
              <button
                class="icon-button"
                title="Background Color"
                type="button"
              >
                <span
                  class="icons icon-Text-background"
                />
              </button>
            </div>
          </div>
          <div
            class="toolbar-group"
          >
            <div
              style="position: relative;"
            >
              <button
                class="icon-button"
                title="Insert Link"
                type="button"
              >
                <span
                  class="icons icon-Hyperlink"
                />
              </button>
            </div>
            <div
              style="position: relative;"
            >
              <button
                class="icon-button"
                title="Insert Image"
                type="button"
              >
                <span
                  class="icons icon-Image"
                />
              </button>
            </div>
            <div
              style="position: relative;"
            >
              <button
                class="icon-button"
                title="Insert YouTube Video"
                type="button"
              >
                <span
                  class="icons icon-Film"
                />
              </button>
            </div>
          </div>
          <div
            class="toolbar-group"
          >
            <button
              class="toolbar-dropdown-button textFormat"
              title="Text Format"
              type="button"
            >
              <span
                class="dropdown-label"
              >
                Heading 2
              </span>
              <span
                class="icons icon-Arrow-down dropdown-arrow"
              />
            </button>
          </div>
          <div
            class="toolbar-group"
          >
            <button
              class="icon-button"
              title="Block quote"
              type="button"
            >
              <span
                class="icons icon-Blockquote"
              />
            </button>
            <button
              class="icon-button"
              title="Code"
              type="button"
            >
              <span
                class="icons icon-Inline-code"
              />
            </button>
            <button
              class="icon-button"
              title="Code Block"
              type="button"
            >
              <span
                class="icons icon-View-edit-code"
              />
            </button>
            <button
              class="icon-button"
              title="View/Edit Code"
              type="button"
            >
              <span
                class="icons icon-Code-block"
              />
            </button>
          </div>
          <div
            class="toolbar-group"
          >
            <button
              class="icon-button"
              title="Clear Formatting"
              type="button"
            >
              <span
                class="icons icon-Erase"
              />
            </button>
          </div>
          <div
            class="toolbar-group"
          >
            <button
              class="icon-button"
              title="Insert Table"
              type="button"
            >
              <span
                class="icons icon-Table"
              />
            </button>
          </div>
          <div
            class="toolbar-group"
          >
            <button
              class="icon-button"
              title="Fullscreen"
              type="button"
            >
              <span
                class="icons icon-Expand"
              />
            </button>
          </div>
          <div
            class="toolbar-group"
          >
            <button
              aria-expanded="false"
              aria-haspopup="dialog"
              aria-label="Keyboard shortcuts"
              class="icon-button help-button"
              title="Keyboard shortcuts"
              type="button"
            >
              <span
                class="icons icon-Help"
              />
            </button>
          </div>
        </div>
        <div
          class="toolbar-row toolbar-row-primary"
        />
      </div>
      <div
        class="tiptap-editor"
        style="height: auto;"
      >
        <div
          class="tiptap ProseMirror"
          contenteditable="true"
          role="textbox"
          tabindex="0"
          translate="no"
        >
          <h2
            style="text-align: left;"
          >
            <strong>
              Rich text default value
            </strong>
          </h2>
          <p>
            <br
              class="ProseMirror-trailingBreak"
            />
          </p>
        </div>
      </div>
    </div>
    <div
      aria-label="Editor status bar"
      aria-live="polite"
      class="rich-text-status-bar"
      role="region"
      tabindex="0"
    >
      <span
        class="status-bar-text"
      >
        Words: 4
      </span>
    </div>
  </div>
</div>
`;

exports[`Rich Text renders richtext widget with readonly config 1`] = `
<div>
  <div
    class="widget-rich-text form-control toolbar-bottom widget-rich-text-readonly-bordered"
    style="width: 100%;"
  >
    <div
      class="tiptap-wrapper"
    >
      <div
        class="tiptap-editor"
        style="height: auto;"
      >
        <div
          class="tiptap ProseMirror"
          contenteditable="false"
          role="textbox"
          translate="no"
        >
          <h2
            style="text-align: left;"
          >
            <strong>
              Rich text default value
            </strong>
          </h2>
          <p>
            <br
              class="ProseMirror-trailingBreak"
            />
          </p>
        </div>
      </div>
    </div>
    <div
      aria-label="Editor status bar"
      aria-live="polite"
      class="rich-text-status-bar"
      role="region"
      tabindex="0"
    >
      <span
        class="status-bar-text"
      >
        Words: 4
      </span>
    </div>
  </div>
</div>
`;

exports[`Rich Text renders with HTML character count status bar 1`] = `
<div>
  <div
    class="widget-rich-text form-control toolbar-bottom"
    style="width: 100%;"
  >
    <div
      class="tiptap-wrapper"
    >
      <div
        class="tiptap-toolbar"
      >
        <div
          class="toolbar-row toolbar-row-primary"
        >
          <div
            class="toolbar-group"
          >
            <button
              class="icon-button is-active"
              title="Bold"
              type="button"
            >
              <span
                class="icons icon-Text-bold"
              />
            </button>
            <button
              class="icon-button"
              title="Italic"
              type="button"
            >
              <span
                class="icons icon-Text-italic"
              />
            </button>
            <button
              class="icon-button"
              title="Underline"
              type="button"
            >
              <span
                class="icons icon-Text-underline"
              />
            </button>
            <button
              class="icon-button"
              title="Strikethrough"
              type="button"
            >
              <span
                class="icons icon-Text-strikethrough"
              />
            </button>
          </div>
          <div
            class="toolbar-group"
          >
            <button
              class="icon-button"
              title="Bullet List"
              type="button"
            >
              <span
                class="icons icon-List-bullets"
              />
            </button>
            <div
              aria-label="Numbered List"
              class="split-button "
              role="group"
            >
              <button
                aria-label="Numbered List - Toggle"
                aria-pressed="false"
                class="split-button-main icon-button"
                type="button"
              >
                <span
                  class="icons icon-List-numbers"
                />
              </button>
              <button
                aria-expanded="false"
                aria-haspopup="menu"
                aria-label="Numbered List - Style options"
                class="split-button-dropdown"
                type="button"
              >
                <span
                  class="icons icon-Arrow-down dropdown-arrow"
                />
              </button>
            </div>
            <button
              class="icon-button"
              title="Task List"
              type="button"
            >
              <span
                class="icons icon-List-checklist"
              />
            </button>
          </div>
          <div
            class="toolbar-group"
          >
            <button
              class="icon-button"
              title="Decrease Indent"
              type="button"
            >
              <span
                class="icons icon-Text-indent-right"
              />
            </button>
            <button
              class="icon-button"
              title="Increase Indent"
              type="button"
            >
              <span
                class="icons icon-Text-indent-left"
              />
            </button>
            <button
              class="icon-button"
              title="Text Direction"
              type="button"
            >
              <span
                class="icons icon-Left-to-right"
              />
            </button>
          </div>
          <div
            class="toolbar-group"
          >
            <div
              style="position: relative;"
            >
              <button
                class="icon-button"
                title="Insert Link"
                type="button"
              >
                <span
                  class="icons icon-Hyperlink"
                />
              </button>
            </div>
            <div
              style="position: relative;"
            >
              <button
                class="icon-button"
                title="Insert Image"
                type="button"
              >
                <span
                  class="icons icon-Image"
                />
              </button>
            </div>
            <div
              style="position: relative;"
            >
              <button
                class="icon-button"
                title="Insert YouTube Video"
                type="button"
              >
                <span
                  class="icons icon-Film"
                />
              </button>
            </div>
          </div>
          <div
            class="toolbar-group"
          >
            <button
              class="icon-button"
              title="Clear Formatting"
              type="button"
            >
              <span
                class="icons icon-Erase"
              />
            </button>
          </div>
        </div>
        <div
          class="toolbar-row toolbar-row-primary"
        />
      </div>
      <div
        class="tiptap-editor"
        style="height: auto;"
      >
        <div
          class="tiptap ProseMirror"
          contenteditable="true"
          role="textbox"
          tabindex="0"
          translate="no"
        >
          <h2
            style="text-align: left;"
          >
            <strong>
              Rich text default value
            </strong>
          </h2>
          <p>
            <br
              class="ProseMirror-trailingBreak"
            />
          </p>
        </div>
      </div>
    </div>
    <div
      aria-label="Editor status bar"
      aria-live="polite"
      class="rich-text-status-bar"
      role="region"
      tabindex="0"
    >
      <span
        class="status-bar-text"
      >
        Characters (HTML): 82
      </span>
    </div>
  </div>
</div>
`;

exports[`Rich Text renders with both word and character count 1`] = `
<div>
  <div
    class="widget-rich-text form-control toolbar-bottom"
    style="width: 100%;"
  >
    <div
      class="tiptap-wrapper"
    >
      <div
        class="tiptap-toolbar"
      >
        <div
          class="toolbar-row toolbar-row-primary"
        >
          <div
            class="toolbar-group"
          >
            <button
              class="icon-button is-active"
              title="Bold"
              type="button"
            >
              <span
                class="icons icon-Text-bold"
              />
            </button>
            <button
              class="icon-button"
              title="Italic"
              type="button"
            >
              <span
                class="icons icon-Text-italic"
              />
            </button>
            <button
              class="icon-button"
              title="Underline"
              type="button"
            >
              <span
                class="icons icon-Text-underline"
              />
            </button>
            <button
              class="icon-button"
              title="Strikethrough"
              type="button"
            >
              <span
                class="icons icon-Text-strikethrough"
              />
            </button>
          </div>
          <div
            class="toolbar-group"
          >
            <button
              class="icon-button"
              title="Bullet List"
              type="button"
            >
              <span
                class="icons icon-List-bullets"
              />
            </button>
            <div
              aria-label="Numbered List"
              class="split-button "
              role="group"
            >
              <button
                aria-label="Numbered List - Toggle"
                aria-pressed="false"
                class="split-button-main icon-button"
                type="button"
              >
                <span
                  class="icons icon-List-numbers"
                />
              </button>
              <button
                aria-expanded="false"
                aria-haspopup="menu"
                aria-label="Numbered List - Style options"
                class="split-button-dropdown"
                type="button"
              >
                <span
                  class="icons icon-Arrow-down dropdown-arrow"
                />
              </button>
            </div>
            <button
              class="icon-button"
              title="Task List"
              type="button"
            >
              <span
                class="icons icon-List-checklist"
              />
            </button>
          </div>
          <div
            class="toolbar-group"
          >
            <button
              class="icon-button"
              title="Decrease Indent"
              type="button"
            >
              <span
                class="icons icon-Text-indent-right"
              />
            </button>
            <button
              class="icon-button"
              title="Increase Indent"
              type="button"
            >
              <span
                class="icons icon-Text-indent-left"
              />
            </button>
            <button
              class="icon-button"
              title="Text Direction"
              type="button"
            >
              <span
                class="icons icon-Left-to-right"
              />
            </button>
          </div>
          <div
            class="toolbar-group"
          >
            <div
              style="position: relative;"
            >
              <button
                class="icon-button"
                title="Insert Link"
                type="button"
              >
                <span
                  class="icons icon-Hyperlink"
                />
              </button>
            </div>
            <div
              style="position: relative;"
            >
              <button
                class="icon-button"
                title="Insert Image"
                type="button"
              >
                <span
                  class="icons icon-Image"
                />
              </button>
            </div>
            <div
              style="position: relative;"
            >
              <button
                class="icon-button"
                title="Insert YouTube Video"
                type="button"
              >
                <span
                  class="icons icon-Film"
                />
              </button>
            </div>
          </div>
          <div
            class="toolbar-group"
          >
            <button
              class="icon-button"
              title="Clear Formatting"
              type="button"
            >
              <span
                class="icons icon-Erase"
              />
            </button>
          </div>
        </div>
        <div
          class="toolbar-row toolbar-row-primary"
        />
      </div>
      <div
        class="tiptap-editor"
        style="height: auto;"
      >
        <div
          class="tiptap ProseMirror"
          contenteditable="true"
          role="textbox"
          tabindex="0"
          translate="no"
        >
          <h2
            style="text-align: left;"
          >
            <strong>
              Rich text default value
            </strong>
          </h2>
          <p>
            <br
              class="ProseMirror-trailingBreak"
            />
          </p>
        </div>
      </div>
    </div>
    <div
      aria-label="Editor status bar"
      aria-live="polite"
      class="rich-text-status-bar"
      role="region"
      tabindex="0"
    >
      <span
        class="status-bar-text"
      />
    </div>
  </div>
</div>
`;

exports[`Rich Text renders with character count status bar 1`] = `
<div>
  <div
    class="widget-rich-text form-control toolbar-bottom"
    style="width: 100%;"
  >
    <div
      class="tiptap-wrapper"
    >
      <div
        class="tiptap-toolbar"
      >
        <div
          class="toolbar-row toolbar-row-primary"
        >
          <div
            class="toolbar-group"
          >
            <button
              class="icon-button is-active"
              title="Bold"
              type="button"
            >
              <span
                class="icons icon-Text-bold"
              />
            </button>
            <button
              class="icon-button"
              title="Italic"
              type="button"
            >
              <span
                class="icons icon-Text-italic"
              />
            </button>
            <button
              class="icon-button"
              title="Underline"
              type="button"
            >
              <span
                class="icons icon-Text-underline"
              />
            </button>
            <button
              class="icon-button"
              title="Strikethrough"
              type="button"
            >
              <span
                class="icons icon-Text-strikethrough"
              />
            </button>
          </div>
          <div
            class="toolbar-group"
          >
            <button
              class="icon-button"
              title="Bullet List"
              type="button"
            >
              <span
                class="icons icon-List-bullets"
              />
            </button>
            <div
              aria-label="Numbered List"
              class="split-button "
              role="group"
            >
              <button
                aria-label="Numbered List - Toggle"
                aria-pressed="false"
                class="split-button-main icon-button"
                type="button"
              >
                <span
                  class="icons icon-List-numbers"
                />
              </button>
              <button
                aria-expanded="false"
                aria-haspopup="menu"
                aria-label="Numbered List - Style options"
                class="split-button-dropdown"
                type="button"
              >
                <span
                  class="icons icon-Arrow-down dropdown-arrow"
                />
              </button>
            </div>
            <button
              class="icon-button"
              title="Task List"
              type="button"
            >
              <span
                class="icons icon-List-checklist"
              />
            </button>
          </div>
          <div
            class="toolbar-group"
          >
            <button
              class="icon-button"
              title="Decrease Indent"
              type="button"
            >
              <span
                class="icons icon-Text-indent-right"
              />
            </button>
            <button
              class="icon-button"
              title="Increase Indent"
              type="button"
            >
              <span
                class="icons icon-Text-indent-left"
              />
            </button>
            <button
              class="icon-button"
              title="Text Direction"
              type="button"
            >
              <span
                class="icons icon-Left-to-right"
              />
            </button>
          </div>
          <div
            class="toolbar-group"
          >
            <div
              style="position: relative;"
            >
              <button
                class="icon-button"
                title="Insert Link"
                type="button"
              >
                <span
                  class="icons icon-Hyperlink"
                />
              </button>
            </div>
            <div
              style="position: relative;"
            >
              <button
                class="icon-button"
                title="Insert Image"
                type="button"
              >
                <span
                  class="icons icon-Image"
                />
              </button>
            </div>
            <div
              style="position: relative;"
            >
              <button
                class="icon-button"
                title="Insert YouTube Video"
                type="button"
              >
                <span
                  class="icons icon-Film"
                />
              </button>
            </div>
          </div>
          <div
            class="toolbar-group"
          >
            <button
              class="icon-button"
              title="Clear Formatting"
              type="button"
            >
              <span
                class="icons icon-Erase"
              />
            </button>
          </div>
        </div>
        <div
          class="toolbar-row toolbar-row-primary"
        />
      </div>
      <div
        class="tiptap-editor"
        style="height: auto;"
      >
        <div
          class="tiptap ProseMirror"
          contenteditable="true"
          role="textbox"
          tabindex="0"
          translate="no"
        >
          <h2
            style="text-align: left;"
          >
            <strong>
              Rich text default value
            </strong>
          </h2>
          <p>
            <br
              class="ProseMirror-trailingBreak"
            />
          </p>
        </div>
      </div>
    </div>
    <div
      aria-label="Editor status bar"
      aria-live="polite"
      class="rich-text-status-bar"
      role="region"
      tabindex="0"
    >
      <span
        class="status-bar-text"
      >
        Characters: 25
      </span>
    </div>
  </div>
</div>
`;
